kmesh/e2e/kmesh-crds.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: kmeshnodeinfos.kmesh.net
spec:
  group: kmesh.net
  names:
    kind: KmeshNodeInfo
    listKind: KmeshNodeInfoList
    plural: kmeshnodeinfos
    singular: kmeshnodeinfo
  scope: Namespaced
  versions:
    - name: v1alpha1
      served: true
      storage: true
      schema:
        openAPIV3Schema:
          type: object
          properties:
            spec:
              type: object
              properties:
                spi:
                  type: integer
                addresses:
                  type: array
                  items:
                    type: string
                bootID:
                  type: string
                podCIDRS:
                  type: array
                  items:
                    type: string
